<resources>
    <string name="app_name">TPC2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="estudante">Estudante</string>
    <string name="lista">Lista</string>
    <string name="settings">Setting</string>
    <string name="registro">Registro</string>
    <string name="nome">Nome</string>
    <string name="curso">Curso</string>
    <string name="idade">Idade</string>
    <string name="bt_estudante">Registar</string>
</resources>